[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/soldier1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/meleeSoldier.gd" type="Script" id=2]
[ext_resource path="res://Assets/spear.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=4]
[ext_resource path="res://Assets/bounding box.png" type="Texture" id=5]
[ext_resource path="res://Assets/progress-bar-under.png" type="Texture" id=6]
[ext_resource path="res://Assets/progress-bar-progress.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.71672
height = 6.04341

[sub_resource type="Animation" id=2]
resource_name = "Swing"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -7.5 ), Vector2( 16, -3 ), Vector2( 0, -7.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="melee" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
speed = 30.0
attackRange = 15
maxDamage = 2.0

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.52556, -6.93739 )
shape = SubResource( 1 )

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -8.27561
margin_top = -17.9981
margin_right = 7.72439
margin_bottom = -14.9981
step = 0.0
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.996078, 0.192157, 0.0627451, 0.419608 )
tint_over = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.309804, 0.894118, 0.729412, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 1.12448, -7.85598 )
script = ExtResource( 4 )

[node name="WeaponSprite" type="Sprite" parent="Weapon"]
position = Vector2( 0, -7.5 )
scale = Vector2( 0.743789, 0.697803 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/Swing = SubResource( 2 )

[node name="VisionRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
shape = SubResource( 3 )

[node name="AvoidRayCast" type="Node2D" parent="."]

[node name="Front" type="RayCast2D" parent="AvoidRayCast"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="Down" type="RayCast2D" parent="AvoidRayCast"]
rotation = -0.174533
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="FDown" type="RayCast2D" parent="AvoidRayCast"]
rotation = -0.959931
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="Up" type="RayCast2D" parent="AvoidRayCast"]
rotation = -2.803
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="FUp" type="RayCast2D" parent="AvoidRayCast"]
rotation = -2.18166
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="UpBack" type="RayCast2D" parent="AvoidRayCast"]
rotation = 0.523599
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="DownBack" type="RayCast2D" parent="AvoidRayCast"]
rotation = -3.49066
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="animation_finished" from="Weapon/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_VisionRange_body_exited"]
